# DSA2000-Cal

./: .env  .gitignore  README.md  docker-compose.yaml  inspect.sh  quartical.env  requirements.txt  run.sh  run_calibration.sh  run_compose.sh  run_dft_predict.sh  run_inspect.env  run_prepare_run.sh  run_quartical.sh  run_simulate_ionosphere.sh  run_simulate_rfi.sh  run_sum_visibilities.sh  simulate_ionosphere.env  stop.sh
dsa2000_cal/: MANIFEST.in  README.md  build_manifest.py  pyproject.toml  pytest.ini  requirements-casa.txt  requirements-geo.txt  requirements-notebooks.txt  requirements-tests.txt  requirements.txt  setup.py
dsa2000_cal/benchmarking/: vmap_scan_vmap_composition.py
dsa2000_cal/debug/: add_caller_of_caller_info.py  approx_cg_newton.py  arginfo.py  astropy_view_bug.py  benchmark_deconvolve.py  brad_verify.py  brad_verify.txt  closure.py  debug_multi_step_lm.py  explore_sharding.py  fft_correctness.py  fft_ordering.py  figbonacci_sphere.py  fit_zernike.py  fix_degrid_grid.py  hermite_fourier.py  import_module.py  interp_exponentials.py  jit_slow_down.py  lobpcg_single_eigenvalue.py  multi_host_multi_process.py  nan_bug.py  new_pure_callback.py  one_factor.py  optimise_multi_step_lm.py  pivoted_cholesky.py  psf_optimise.py  pure_callback_jit.py  ray_jax.py  share_interp.py  simplify_frozen_flow.py  simplify_vec.py  sin_projection.py  smearing_quad.py  static_lower.py  stream_test.py  temp_action_fail.py  vmap_callback.py  wasserstein_dist.py  wgridder_error.py  (+3 more)
dsa2000_cal/dsa2000_cal/: abc.py  antenna_beam.py  astropy_utils.py  bbs_sky_model.py  calibration.py  conftest.py  coord_utils.py  create_ms_cfg.py  dft.py  faint_sky_model.py  gains.py  instrumental_effects.py  jax_utils.py  noise.py  quartical_beam.py  run_config.py  socket_interface.py  types.py  utils.py
dsa2000_cal/example_interface/: server.py
dsa2000_cal/example_xla_extraction/: make_xla.py
dsa2000_cal/large_files/: README.md
(+1558 files in other folders)
